src/debug.log

> arg_list <- list(
+   X = design_mat$X,
+   tstart = design_mat$Y[, 1],  tstop = design_mat$Y[, 2], events = design_mat$Y[, 3],
+   a_0 = rep(0, nco .... [TRUNCATED] 

> res <- do.call(ddhazard_fit, arg_list)

> tryCatch({
+   res_new <- do.call(ddhazard_fit_cpp_prelim, arg_list)
+ }, finally = function(...){
+   close(log_file)
+   sink()
+ })

> test_that("Testing old versus new implementation", {
+   expect_equal(res$a_t_d_s, res_new$a_t_d_s)
+   expect_equal(res$V_t_d_s, res_new$V_t_d_s)
+ .... [TRUNCATED] 
c:/Rtools/mingw_64/bin/g++  -std=c++0x -I"C:/PROGRA~1/R/R-33~1.1/include" -DNDEBUG     -I"C:/Users/boennecd/Documents/R/win-library/3.3/Rcpp/include" -I"C:/Users/boennecd/Documents/R/win-library/3.3/RcppArmadillo/include" -I"C:/Users/boennecd/Dropbox/skole_backup/phd/dynamichazard/src" -I"C:/Users/boennecd/Dropbox/skole_backup/phd/dynamichazard/inst/include"  -I"d:/Compiler/gcc-4.9.3/local330/include"     -O2 -Wall  -mtune=core2 -c ddhazard_fit.cpp -o ddhazard_fit.o
ddhazard_fit.cpp: In constructor 'EKF_helper::EKF_helper(problem_data_EKF&)':
ddhazard_fit.cpp:300:22: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for(int i = 0; i < hardware_threads; i++){
                      ^
ddhazard_fit.cpp: In function 'Rcpp::List ddhazard_fit_cpp_prelim(const NumericMatrix&, const vec&, const vec&, const ivec&, const colvec&, arma::mat, arma::mat, const List&, const mat&, int, double, bool, bool, int, bool)':
ddhazard_fit.cpp:453:74: error: 'Solver' is an inaccessible base of 'EKF_solver'
   Solver *solver = new EKF_solver(static_cast<problem_data_EKF&>(*p_data));
                                                                          ^
ddhazard_fit.cpp:576:13: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
 }while(++it < n_max);
             ^
ddhazard_fit.cpp:582:9: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   if(it == n_max)
         ^
make: *** [ddhazard_fit.o] Error 1
Warning message:
running command 'make -f "C:/PROGRA~1/R/R-33~1.1/etc/x64/Makeconf" -f "C:/PROGRA~1/R/R-33~1.1/share/make/winshlib.mk" CXX='$(CXX1X) $(CXX1XSTD)' CXXFLAGS='$(CXX1XFLAGS)' CXXPICFLAGS='$(CXX1XPICFLAGS)' SHLIB_LDFLAGS='$(SHLIB_CXX1XLDFLAGS)' SHLIB_LD='$(SHLIB_CXX1XLD)' SHLIB="sourceCpp_3.dll" WIN=64 TCLBIN=64 OBJECTS="ddhazard_fit.o"' had status 2 
